# python-oldmemo

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  oldmemo.proto  pylintrc  pylintrc.toml  pyproject.toml  requirements.txt  setup.py  twomemo.proto
.github/workflows/: test-and-publish.yml  test-on-push.yml
docs/: Makefile  conf.py  getting_started.rst  index.rst  installation.rst  make.bat  migration_from_legacy.rst  twomemo.rst
docs/oldmemo/: etree.rst  migrations.rst  oldmemo.rst  package.rst
docs/twomemo/: etree.rst  package.rst  twomemo.rst
oldmemo/: __init__.py  etree.py  migrations.py  oldmemo.py  oldmemo_pb2.py  oldmemo_pb2.pyi  project.py
twomemo/: __init__.py  etree.py  project.py  schema_pb2.py  schema_pb2.pyi  twomemo.py  twomemo_pb2.py
