[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "Oldmemo"
description = "Backend implementation of the namespace `eu.siacs.conversations.axolotl` for python-omemo."
readme = "README.md"
dynamic = [ "version" ]
authors = [
    { name = "Tim Henkes (Syndace)", email = "me@syndace.dev" }
]
maintainers = [ { name = "Tim Henkes (Syndace)", email = "me@syndace.dev" } ]
license = "AGPL-3.0-only"
license-files = [ "LICENSE" ]
requires-python = ">= 3.9"
dependencies = [
    "OMEMO>=2.0.0,<3",
    "DoubleRatchet>=1.2.0,<2",
    "X3DH>=1.2.0,<2",
    "XEdDSA>=1.0.0,<2",
    "cryptography>=3.3.2",
    "protobuf>=3.20.3",
    "typing-extensions>=4.3.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography"
]

[tool.setuptools.dynamic]
version = { attr = "oldmemo.version.__version__" }

[tool.setuptools.packages.find]
exclude = [ "tests" ]

[project.optional-dependencies]
xml = [
    "xmlschema>=2.0.2"
]
docs = [
    "oldmemo[xml]",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints"
]
lint = [
    "oldmemo[xml]",
    "mypy",
    "types-protobuf",
    "pylint",
    "flake8",
    "flake8-pyproject"
]
dev = [
    "oldmemo[xml,docs,lint]",
    "mypy-protobuf"
]

[project.urls]
Documentation = "https://python-oldmemo.readthedocs.io/"
Repository = "https://github.com/Syndace/python-oldmemo"
Issues = "https://github.com/Syndace/python-oldmemo/issues"
Changelog = "https://github.com/Syndace/python-oldmemo/blob/main/CHANGELOG.md"

[tool.mypy]
strict = true

[tool.flake8]
max-line-length = 110
doctests = true
ignore = [ "E201", "E202", "W503" ]
exclude = "*_pb2.py"
per-file-ignores = [
    "oldmemo/__init__.py:F401"
]
